--- a/src/app/shared/components/temoignage/temoignage.component.scss
+++ b/src/app/shared/components/temoignage/temoignage.component.scss
@@ -171,6 +171,8 @@
     }
     .subtitle {
       font-size: 18px;
+      text-align: justify;
+      hyphens: auto;
     }
     .testimonial-card {
       width: 95%;
